WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153133
[GTK] Fix build of RenderThemeGtk without VIDEO by including HTMLInputElement
https://bugs.webkit.org/show_bug.cgi?id=153133
Summary
[GTK] Fix build of RenderThemeGtk without VIDEO by including HTMLInputElement
Olivier Blin
Reported
2016-01-15 09:43:05 PST
Gtk build fails when VIDEO is disabled: WebKit/Source/WebCore/rendering/RenderThemeGtk.cpp: In member function ‘virtual bool WebCore::RenderThemeGtk::shouldHaveCapsLockIndicator(WebCore::HTMLInputElement&) const’: WebKit/Source/WebCore/rendering/RenderThemeGtk.cpp:1045:19: error: invalid use of incomplete type ‘class WebCore::HTMLInputElement’ return element.isPasswordField(); ^
Attachments
Patch
(1.55 KB, patch)
2016-01-15 09:51 PST
,
Olivier Blin
no flags
Details
Formatted Diff
Diff
Patch
(1.46 KB, patch)
2016-01-15 14:27 PST
,
Olivier Blin
no flags
Details
Formatted Diff
Diff
Patch
(1.46 KB, patch)
2016-01-15 14:29 PST
,
Olivier Blin
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Olivier Blin
Comment 1
2016-01-15 09:51:38 PST
Created
attachment 269062
[details]
Patch
Michael Catanzaro
Comment 2
2016-01-15 11:51:40 PST
Comment on
attachment 269062
[details]
Patch Thanks. Please fix the changelog entry though; there should be the title of the bug only once, then the URL of the bug, the reviewed by line, then your description of the issue.
Olivier Blin
Comment 3
2016-01-15 14:27:23 PST
Created
attachment 269098
[details]
Patch
Olivier Blin
Comment 4
2016-01-15 14:29:08 PST
Created
attachment 269099
[details]
Patch
WebKit Commit Bot
Comment 5
2016-01-15 15:22:59 PST
Comment on
attachment 269099
[details]
Patch Clearing flags on attachment: 269099 Committed
r195153
: <
http://trac.webkit.org/changeset/195153
>
WebKit Commit Bot
Comment 6
2016-01-15 15:23:01 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug