[GTK] Fix build of RenderThemeGtk without VIDEO by including HTMLInputElement https://bugs.webkit.org/show_bug.cgi?id=153133

Patch by Olivier Blin <olivier.blin@softathome.com> on 2016-01-15
Reviewed by Michael Catanzaro.

Build was fine with VIDEO enabled, since HTMLInputElement.h was
included by transitivity through MediaControlElements.h and
MediaControlElementTypes.h.

This seems to be broken since r194847.

No new tests since this is just a build fix.

* rendering/RenderThemeGtk.cpp:

Canonical link: https://commits.webkit.org/171237@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195153 268f45cc-cd09-0410-ab3c-d52691b4dbfc